<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_search_shape2"
    android:gravity="center"
    android:layout_margin="20dp"
    android:background="@drawable/gridline">

    <!-- TODO: Update blank fragment layout -->

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:rowCount="2"
        android:columnCount="4"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:background="@drawable/gridline2">

        <ImageButton
            android:id="@+id/circle"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:background="@drawable/gridline"
            android:contentDescription="@string/circle"
            android:scaleType="centerCrop"
            android:src="@drawable/circle" />

        <ImageButton
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:src="@drawable/triangle"
            android:background="@drawable/gridline"
            android:contentDescription="@string/triangle"
            android:scaleType="centerCrop"/>

        <ImageButton
            android:layout_width="62dp"
            android:layout_height="62dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:background="@drawable/ractangle"
            android:contentDescription="@string/ractangle" />

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:background="@drawable/tawon"
            android:contentDescription="@string/tawon" />

        <ImageButton
            android:layout_width="79dp"
            android:layout_height="69dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:background="@drawable/six"
            android:contentDescription="@string/six" />

        <ImageButton
            android:layout_width="71dp"
            android:layout_height="71dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:background="@drawable/eight"
            android:contentDescription="@string/eight" />

        <ImageButton
            android:layout_width="78dp"
            android:layout_height="72dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:background="@drawable/heart"
            android:contentDescription="@string/heart" />

        <ImageButton
            android:layout_width="88dp"
            android:layout_height="75dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:background="@drawable/eeee"
            android:contentDescription="@string/eeee" />

    </GridLayout>

</LinearLayout>